<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:id="@+id/group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="Home"/>

        <item
            android:id="@+id/nav_faces"
            android:title="Faces" />

        <item
            android:id="@+id/nav_settings"
            android:title="Settings" />


    </group>
    <item
        android:id="@+id/nav_logout"
        android:title="Logout" />


</menu>