<?xml version="1.0" encoding="utf-8"?>
<!--
 * @author George Bell
 * @version 1.0
 * @since 25/01/2021
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoFactorAuthActivity"
    android:layout_marginLeft = "15dp"
    android:layout_marginRight="15dp">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Smart Doorbell"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        android:padding="10dp"
         />

    <TextView
        android:id="@+id/tv2FA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Two Factor Authentication"
        android:textSize="24sp"
        android:layout_below="@id/tvAppName"
        android:layout_marginTop="50dp"
        android:padding="15dp" />

    <TextView
        android:id="@+id/tvCheckEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/TwoFANotif"
        android:layout_below="@id/tv2FA"
        android:padding="15dp"
        />


    <EditText
        android:id="@+id/etInputDigits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="6 digit number"
        android:inputType="textPersonName"
        android:layout_below="@id/tvCheckEmail"
        android:padding="15dp"/>

    <Button
        android:id="@+id/btnSubmitDigits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:padding="15dp"
        android:layout_below="@+id/tvCheckEmail"
        android:layout_toRightOf="@+id/etInputDigits"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:id="@+id/tv2FAResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="#EF1010"
        android:layout_below="@id/etInputDigits"
        android:padding="15dp"
         />

    <Button
        android:id="@+id/btnReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GO BACK"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:id="@+id/tv2FAAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resend Verification Email?"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:padding="10dp"
        android:layout_alignParentRight="true"/>



</RelativeLayout>